kubernetes-learning/04-services-and-networking/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport-service
spec:
  type: NodePort
  selector:
    app: ecommerce-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080 # Accessible on http://<NodeIP>:30080
